# Moonlight-Switch

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  PrivacyPolicy.md  README.md  build_libromfs_generator.sh  meson.build  vcpkg-android.json  vcpkg-configuration.json1  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: upscaling.agent.md
.github/workflows/: all-builds.yml  android-apk.yml  docker-image.yml  macos.yml  windows-clangarm64.yml  windows-ucrt64.yml  windows.yml
Moonlight-Mac/: Info.plist
Moonlight-Mac/Assets.xcassets/AppIcon.appiconset/: Contents.json
Moonlight.xcodeproj/: project.pbxproj
Moonlight.xcodeproj/xcshareddata/xcschemes/: Moonlight.xcscheme
Moonlight.xcodeproj/xcuserdata/xitrix.xcuserdatad/xcschemes/: xcschememanagement.plist
android-project/: .gitignore  README_ZH.md
android-project/app/: build.gradle
android-project/app/jni/: CMakeLists.txt  SDL  vcpkg
android-project/app/src/main/: AndroidManifest.xml
app/: app.mk  borealis.icns  main.cpp  pokemon_view.cpp  resource.manifest  resource.rc.in  settings_tab.cpp  settings_tab.hpp
app/include/: about_tab.hpp  add_host_tab.hpp  app_cell.hpp  app_list_view.hpp  backward.hpp  button_selecting_dialog.hpp  favorite_tab.hpp  forwarder_maker.hpp  grid_view.hpp  helper.hpp  host_tab.hpp  hosts_tabs_view.hpp  ingame_overlay_view.hpp  keyboard_view.hpp  link_cell.hpp  loading_overlay.hpp  main_activity.hpp  main_args.hpp  main_tabs_view.hpp  mapping_layout_editor.hpp  settings_tab.hpp  streaming_input_overlay.hpp  streaming_view.hpp
app/include/gestures/: click_gesture_recognizer.hpp  fingers_gesture_recognizer.hpp  two_finger_scroll_recognizer.hpp
app/include/views/: boolean_slider_cell.hpp
app/ios/: iOSBundleInfo.plist.in
app/src/: about_tab.cpp  add_host_tab.cpp  app_cell.cpp  app_list_view.cpp  backward.cpp  button_selecting_dialog.cpp  favorite_tab.cpp  forwarder_maker.cpp  forwarder_maker_nacp.cpp  grid_view.cpp  helper.cpp  host_tab.cpp  hosts_tabs_view.cpp  ingame_overlay_view.cpp  keyboard_view.cpp  link_cell.cpp  loading_overlay.cpp  main.cpp  main_activity.cpp  main_args.cpp  main_tabs_view.cpp  mapping_layout_editor.cpp  settings_tab.cpp  streaming_input_overlay.cpp  streaming_view.cpp
app/src/crypto/: CryptoManager.hpp  Data.cpp  Data.hpp  MbedTLSCryptoManager.cpp  MbedTLSCryptoManager.hpp  OpenSSLCryptoManager.cpp  OpenSSLCryptoManager.hpp
app/src/gestures/: click_gesture_recognizer.cpp  fingers_gesture_recognizer.cpp  two_finger_scroll_recognizer.cpp
app/src/keyboards/: english_layout.cpp  full_layout.cpp  keyboard_locales.cpp  numpad_layout.cpp
app/src/libgamestream/: client.cpp  client.h  errors.h  http.cpp  http.h  xml.cpp  xml.h
app/src/streaming/: AVFrameHolder.cpp  AVFrameHolder.hpp  DiscoverManager.cpp  DiscoverManager.hpp  GameStreamClient.cpp  GameStreamClient.hpp  InputManager.cpp  InputManager.hpp  MoonlightSession.cpp  MoonlightSession.hpp  MoonlightSessionDecoderAndRenderProvider.hpp  WakeOnLanManager.cpp  WakeOnLanManager.hpp
app/src/streaming/audio/: AudrenAudioRenderer.cpp  AudrenAudioRenderer.hpp  DebugFileRecorderAudioRenderer.cpp  DebugFileRecorderAudioRenderer.hpp  IAudioRenderer.hpp  SDLAudioRenderer.cpp  SDLAudiorenderer.hpp
app/src/streaming/ffmpeg/: FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.hpp  FFmpegVideoDecoderAndroidHelpers.cpp  FFmpegVideoDecoderD3D11Helpers.cpp  FFmpegVideoDecoderDekoHelpers.cpp  FFmpegVideoDecoderMetalHelpers.cpp  FFmpegVideoDecoderPlatformHelpers.hpp  IFFmpegVideoDecoder.hpp
app/src/streaming/ffmpeg/pacer/: Pacer.cpp  Pacer.h
app/src/streaming/switch/: SwitchMoonlightSessionDecoderAndRenderProvider.cpp  SwitchMoonlightSessionDecoderAndRenderProvider.hpp
app/src/streaming/video/: IVideoRenderer.hpp  UpscalingSupport.hpp
app/src/streaming/video/Android/: AndroidMediaCodecVideoRenderer.cpp  AndroidMediaCodecVideoRenderer.hpp
app/src/streaming/video/D3D11/: D3D11VideoRenderer.cpp  D3D11VideoRenderer.hpp
app/src/switch/: wrapper.c
app/src/utils/: BoxArtManager.cpp  BoxArtManager.hpp  Settings.cpp  Settings.hpp  Singleton.hpp
app/src/views/: boolean_slider_cell.cpp
appstore/: moonlight_store_logo.psb
build.mac/templates/: AppIcon.icns  Info.plist
demo/: components_tab.cpp  main.cpp
docs/: psv-development.md
lib/: libSDL2.la  libcurl.a1  libcurl.la1  libswresample.a1
lib/switch/: libcurl.la
lib/switch/include/curl/: curl.h
lib/switch/include/libavutil/: buffer.h  ffversion.h  hwcontext.h  hwcontext_nvtegra.h  nvhost_ioctl.h  nvmap_ioctl.h  nvtegra.h  pixfmt.h
moonlight-nx/: settings.json
moonlight-nx/key/: client.pem  key.pem
moonlight-nx/key1/: client.pem  key.pem
resources/: .gitignore  cat-256x256.bc1
resources/forwarder/control/: control.nacp
resources/forwarder/exefs/: main  main.npdm
resources/i18n/de/: main.json
resources/i18n/en-US/: brls.json  demo.json  hints.json  main.json  scroll.json
resources/i18n/es/: main.json
resources/i18n/fr/: main.json
resources/i18n/it/: main.json
resources/i18n/ja/: brls.json  main.json
resources/i18n/ko/: main.json
resources/i18n/kr-KO/: main.json
resources/i18n/pt-BR/: main.json
resources/i18n/ru/: brls.json  main.json
resources/i18n/zh-Hans/: demo.json  hints.json  main.json  scroll.json
resources/i18n/zh-Hant/: main.json
resources/shaders/: basic_vsh.dksh  color_fsh.dksh  fill_aa_fsh.dksh  fill_fsh.dksh  fill_vsh.dksh  rcas_fsh.dksh  texture_fsh.dksh  upscaling_fsh.dksh  upscaling_pass_fsh.dksh
resources/xml/activity/: main.xml
resources/xml/cells/: app_cell.xml  boolean_slider_cell.xml  link_cell.xml
resources/xml/tabs/: about.xml  add_host.xml  components.xml  favorites.xml  host.xml  settings.xml
resources/xml/views/: app_list_view.xml  ingame_overlay.xml  stream_input_overlay.xml
resources/xml/views/ingame_overlay/: debug_tab.xml  keys_tab.xml  logout_tab.xml  options_tab.xml  overlay.xml
scripts/: build-mac.sh  build-switch.sh  format.sh  i18n-linter.py  psv-dev.sh  run-clang-format.py  switch.dockerfile
(+24 files in other folders)
